Fixes layout issues for desktop media query

--- a/styles.css
+++ b/styles.css
@@ -196,5 +196,18 @@ label {
         width: 60%;
         height: 80%;
     }
+
+    .search-again-container {
+        width: 90%;
+        overflow-x: scroll;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+        
+    .card {
+        margin: 10px;
+        
+    }
   }
 
